; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/storage/extr_dnstree.c_name_tree_find.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/storage/extr_dnstree.c_name_tree_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name_tree_node = type { i64, i32, i32, i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.name_tree_node* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.name_tree_node* @name_tree_find(i32* %0, i32* %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.name_tree_node, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds %struct.name_tree_node, %struct.name_tree_node* %11, i32 0, i32 4
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store %struct.name_tree_node* %11, %struct.name_tree_node** %13, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = getelementptr inbounds %struct.name_tree_node, %struct.name_tree_node* %11, i32 0, i32 3
  store i32* %14, i32** %15, align 8
  %16 = load i64, i64* %8, align 8
  %17 = getelementptr inbounds %struct.name_tree_node, %struct.name_tree_node* %11, i32 0, i32 0
  store i64 %16, i64* %17, align 8
  %18 = load i32, i32* %9, align 4
  %19 = getelementptr inbounds %struct.name_tree_node, %struct.name_tree_node* %11, i32 0, i32 1
  store i32 %18, i32* %19, align 8
  %20 = load i32, i32* %10, align 4
  %21 = getelementptr inbounds %struct.name_tree_node, %struct.name_tree_node* %11, i32 0, i32 2
  store i32 %20, i32* %21, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = call i64 @rbtree_search(i32* %22, %struct.name_tree_node* %11)
  %24 = inttoptr i64 %23 to %struct.name_tree_node*
  ret %struct.name_tree_node* %24
}

declare dso_local i64 @rbtree_search(i32*, %struct.name_tree_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
